--- a/src/GBKingdom/Views/Home/Index.cshtml
+++ b/src/GBKingdom/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Gummi Bear Kingdom";
+    ViewData["Title"] = "GBK Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h1>Welcome to Gummi Bear Kingdom!</h1>
