--- a/src/GBKingdom/Views/Products/Details.cshtml
+++ b/src/GBKingdom/Views/Products/Details.cshtml
@@ -9,15 +9,25 @@
 <h4>Manufactured in: @Html.DisplayFor(prod => Model.OriginCountry)</h4>
 <h4>Price: $@Html.DisplayFor(prod => Model.Price)</h4>
 <h3>Product Reviews:</h3>
-@foreach (var review in Model.Reviews)
+@if (Model.Reviews.Count == 0)
 {
-    <div>
-        <p>@Html.DisplayFor(rev => review.Stars) of 5 stars review by @Html.DisplayFor(rev => review.Author)</p>
-        <p>@review.Body</p>
-        <div class="adminOnly">
-            <p>@Html.ActionLink("Edit this Review", "Edit", "Reviews", new { id = Model.ProductId }) | @Html.ActionLink("Delete this Review", "Delete", "Reviews", new { id = Model.ProductId })</p>
+    <h5>
+        No reviews yet. Be the first to @Html.ActionLink("Write a review for this product", "Create", "Reviews", new { id = Model.ProductId })
+    </h5>
+}
+else
+{
+    <h5>@Html.ActionLink("Write a review for this product", "Create", "Reviews", new { id = Model.ProductId })</h5>
+    @foreach (var review in Model.Reviews)
+    {
+        <div>
+            <p>@Html.DisplayFor(rev => review.Stars) of 5 stars review by @Html.DisplayFor(rev => review.Author)</p>
+            <p>@review.Body</p>
+            <div class="adminOnly">
+                <p>@Html.ActionLink("Edit this Review", "Edit", "Reviews", new { id = Model.ProductId }) | @Html.ActionLink("Delete this Review", "Delete", "Reviews", new { id = Model.ProductId })</p>
+            </div>
         </div>
-    </div>
+    }
 }
 <div class="adminOnly">
     <p>@Html.ActionLink("Edit this Product", "Edit", new { id = Model.ProductId }) | @Html.ActionLink("Delete this Product", "Delete", new { id = Model.ProductId })</p>
