--- a/src/GBKingdom/Views/Reviews/Delete.cshtml
+++ b/src/GBKingdom/Views/Reviews/Delete.cshtml
@@ -7,7 +7,7 @@
 <h1>Admin Delete Review</h1>
 <h2>Are you sure you want to delete this review?</h2>
 
-<h5>Product Name: @ViewBag.Name</h5>
+<h5>Product Name: @ViewBag.productName</h5>
 <h5>Author: @Model.Author</h5>
 <h5>Body: @Model.Body</h5>
 <p>@Model.Stars of 5 stars.</p>
@@ -15,3 +15,4 @@
 @using (Html.BeginForm())
 {
     <input type="submit" value="Delete" class="btn btn-danger" />
+}
