add styling and layout to home page and products index

--- a/src/GBKingdom/Views/Home/Index.cshtml
+++ b/src/GBKingdom/Views/Home/Index.cshtml
@@ -2,4 +2,10 @@
     ViewData["Title"] = "GBK Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h1>Welcome to Gummi Bear Kingdom!</h1>
+<div class="image-banner">
+    <p>Banner image</p>
+</div>
+<div class="col-sm-12">
+    <h3>All about Gummi Bear Kingdom</h3>
+    <p>Here is some info about GBK and what it means to be Gummi Bear. Gummi Bear is not a brand. It's a lifestyle. GBK is the only home for the Gummi Bear lifestyle. Maybe there are some featured products displayed below here.</p>
+</div>
