--- a/src/GBKingdom/wwwroot/css/styles.css
+++ b/src/GBKingdom/wwwroot/css/styles.css
@@ -2,11 +2,52 @@
     text-align:center;
 }
 .heading .head-search{
-    margin: 20px auto;
+    display:block;
+    margin: 30px auto;
 }
 .navbar-nav{
         float:none;
         margin: 0 auto;
         display: table;
         table-layout: fixed;
+}
+.btn {
+    border-radius: 0;
+}
+.image-banner{
+    width: 100%;
+    height: 250px;
+    border: 2px solid black;
+    text-align: center;
+}
+.body h3{
+    text-align: center;
+}
+.product-box {
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:center;
+}
+.product-tile {
+    border: 1px solid lightgray;
+    width: 200px;
+    height: 300px;
+    text-align: center;
+    margin: 10px 10px;
+}
+.product-tile:hover{
+    border:1px solid black;
+}
+.product-tile-image{
+    display: block;
+    margin: 10px auto;
+    height: 200px;
+    width: 150px;
+    border: 1px solid lightgray;
+    text-align: center;
+}
+.adminOnly{
+    background-color: #ffb7b7;
+    width:300px;
 }
